--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_DEBUG=true
 APP_KEY=KWp2ieHs3d2am6pKLLGjcOtCKEf22s6q
 
 DB_HOST=localhost
-DB_DATABASE=Authorization
+DB_DATABASE=ahr
 DB_USERNAME=root
 DB_PASSWORD=
 
