--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ APP_KEY=KWp2ieHs3d2am6pKLLGjcOtCKEf22s6q
 
 DB_HOST=localhost
 DB_DATABASE=ahr
-DB_USERNAME=forge
-DB_PASSWORD=req9NQBtjVAyNiR0d7nQ
+DB_USERNAME=root
+DB_PASSWORD=
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
